# ha-sberdevices

./: .editorconfig  .gitignore  README.md  hacs.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: hacs.yml  hassfest.yml  validate.yml
custom_components/sberdevices/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  entity.py  light.py  manifest.json  media_player.py  sensor.py  strings.json  switch.py  vacuum.py
custom_components/sberdevices/core/: __init__.py  auth.py  coordinator.py  entity.py  gateway.py  runtime.py  snapshot.py
custom_components/sberdevices/translations/: en.json  ru.json
scripts/: check  develop  dump_devices.py  get_token.py  lint  probe_boom.py  setup  test
tests/: test_real_api.py
